# ai-devops

./: .gitattributes  .gitignore  CP2_COMPLETION_REPORT.md  CP2_FINAL_SUMMARY.md  RALPH_PHASE1_COMPLETION_REPORT.md  README.md  README.zh-CN.md  SINGLETON_FIX_SUMMARY.md  TEST_PRODUCTION_WORKFLOW_DETAILED_REPORT.md  TEST_PRODUCTION_WORKFLOW_REPORT.md  TEST_REPORT_FINAL.md  TEST_REPORT_PHASE2.md  TEST_REPORT_PHASE3.md  ai-devops-monitor.service  ai-devops-monitor.timer  ai-devops-webhook.service  cleanup_test.sh  com.ai-devops.monitor.plist  com.ai-devops.webhook.plist  conftest.py  pyproject.toml  requirements.txt  test_full_pipeline.py  test_production_task.json  test_ws_integration.py
agent_scripts/: run-codex-agent.sh
agents/: run-codex-agent.sh
apps/: __init__.py
discord/: .env.example  bot.py
docs/: CODE_REVIEW_2026-04-04.md  FINAL_CODE_REVIEW_2026-04-04.md  INDEX.md  RALPH_ARCHITECTURE.md  RALPH_INTEGRATION.md  SYSTEM_DESIGN_REVIEW_2026-04-04.md  TASK_SPEC_TEMPLATE.md  TEST_COVERAGE.md  agent-cli.md  sqlite-migration-summary.md  stage3-summary.md  webhook-setup.md  zoe_planner.md
orchestrator/: agent_tasks.db
pytest/: __init__.py  __main__.py
scripts/: babysit.sh  cleanup-worktrees.sh  package_0_acceptance.py  package_1_acceptance.py  package_2_acceptance.py  package_3_acceptance.py  spawn-agent.sh  test.sh  test_zoe_flow.py
tests/: __init__.py  test_agent.py  test_agent_sdk_acceptance.py  test_agent_sdk_agent_factory.py  test_agent_sdk_context_bridge.py  test_agent_sdk_event_bridge.py  test_agent_sdk_executor.py  test_agent_sdk_full_pipeline.py  test_agent_sdk_input_guards.py  test_agent_sdk_integration.py  test_agent_sdk_mcp_context_server.py  test_agent_sdk_model_router.py  test_agent_sdk_output_guards.py  test_agent_sdk_prompt_injection_guard.py  test_agent_sdk_tool_registry.py  test_agent_sdk_tools.py  test_agent_sdk_usage_collector.py  test_cleanup_daemon.py  test_console_api.py  test_console_work_items_service.py  test_context_adapters.py  test_context_graph.py  test_context_indexer.py  test_context_injector.py  test_context_packer.py  test_critical_fixes.py  test_dag_renderer.py  test_db.py  test_db_dual_write.py  test_dispatch.py  test_domain_models.py  test_eval_engine.py  test_event_manager.py  (+50 more)
(+198 files in other folders)
