[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-devops"
version = "0.1.0"
description = "Local deterministic tool layer for planning, dispatching, and monitoring coding-agent worktrees."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "schedule>=1.2",
]

[project.scripts]
zoe-tool-api = "orchestrator.bin.zoe_tool_api:main"
ai-devops-agent = "orchestrator.bin.agent:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["orchestrator*", "packages*", "apps*"]
exclude = ["tests*", "discord*", "openclaw-skills*"]
