[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-devops"
version = "2.0.0"
description = "Intelligent agent engineering operations system for product delivery, powered by OpenAI Agents SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "schedule>=1.2",
  "openai-agents>=0.14",
  "litellm>=1.40",
  "mcp>=1.19",
]

[project.scripts]
zoe-tool-api = "orchestrator.bin.zoe_tool_api:main"
ai-devops-agent = "orchestrator.bin.agent:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["orchestrator*", "packages*", "apps*"]
exclude = ["tests*", "discord*", "openclaw-skills*"]
